ejbca-common-web clean up eclipse warnings